# GAMES101

./: .gitignore  CMakeLists.txt  README.md
Assignment1/: CMakeLists.txt  main.cpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: CMakeLists.txt  main.cpp
Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  main.cpp
Assignment7/images/: binary.ppm  spp1024.ppm  spp128.ppm  spp512.ppm
Assignment8/: main.cpp  rope.cpp
